--- a/src/ray/core_worker/tests/BUILD.bazel
+++ b/src/ray/core_worker/tests/BUILD.bazel
@@ -96,7 +96,7 @@ ray_cc_test(
         "//src/ray/core_worker:reference_count",
         "//src/ray/core_worker:task_event_buffer",
         "//src/ray/core_worker:task_manager",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client",
         "//src/ray/observability:fake_metric",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
@@ -113,7 +113,7 @@ ray_cc_test(
         "//src/ray/common:task_common",
         "//src/ray/common:test_utils",
         "//src/ray/core_worker:task_event_buffer",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client",
         "//src/ray/util:event",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/synchronization",
@@ -135,7 +135,7 @@ ray_cc_test(
         "//:ray_mock",
         "//src/ray/common:test_utils",
         "//src/ray/core_worker:task_event_buffer",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client",
         "//src/ray/util:event",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/types:optional",
@@ -171,7 +171,7 @@ ray_cc_test(
         "//src/ray/common:test_utils",
         "//src/ray/core_worker:common",
         "//src/ray/core_worker:generator_waiter",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
@@ -186,7 +186,7 @@ ray_cc_test(
         "//:ray_mock",
         "//src/ray/common:test_utils",
         "//src/ray/core_worker:actor_manager",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
