--- a/src/ray/gcs_client/tests/BUILD.bazel
+++ b/src/ray/gcs_client/tests/BUILD.bazel
@@ -9,7 +9,7 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//src/ray/common:test_utils",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client",
         "@com_google_googletest//:gtest_main",
     ],
 )
@@ -31,8 +31,8 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//src/ray/common:test_utils",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
-        "//src/ray/gcs/gcs_client:global_state_accessor_lib",
+        "//src/ray/gcs_client:gcs_client",
+        "//src/ray/gcs_client:global_state_accessor_lib",
         "//src/ray/gcs/gcs_server:gcs_server_lib",
         "//src/ray/util:path_utils",
         "//src/ray/util:raii",
@@ -61,7 +61,7 @@ ray_cc_test(
     ],
     deps = [
         "//src/ray/common:test_utils",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client",
         "//src/ray/gcs/gcs_server:gcs_server_lib",
         "//src/ray/util:network_util",
         "//src/ray/util:raii",
@@ -89,7 +89,7 @@ ray_cc_test(
     ],
     deps = [
         "//src/ray/common:test_utils",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client",
         "//src/ray/gcs/gcs_server:gcs_server_lib",
         "//src/ray/util:network_util",
         "//src/ray/util:path_utils",
