--- a/src/ray/rpc/raylet/tests/BUILD.bazel
+++ b/src/ray/rpc/raylet/tests/BUILD.bazel
@@ -7,7 +7,7 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//src/fakes/ray/rpc/raylet:fake_raylet_client",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client:gcs_client",
         "//src/ray/rpc:raylet_client_pool",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
