--- a/release/release_data_tests.yaml
+++ b/release/release_data_tests.yaml
@@ -493,6 +493,7 @@
 # 300 GB image classification parquet data up to 10 GPUs
 # 10 g4dn.12xlarge.
 - name: "batch_inference_{{scaling}}"
+  group: batch-inference
 
   cluster:
     cluster_compute: "{{scaling}}_gpu_compute.yaml"
@@ -512,6 +513,7 @@
   # Don't use 'nightly_tests/dataset' as the working directory because we need to run
   # the 'setup_chaos.py' script.
   working_dir: nightly_tests
+  group: batch-inference
 
   cluster:
     cluster_compute: dataset/autoscaling_gpu_compute.yaml
@@ -526,6 +528,7 @@
 - name: batch_inference_chaos_no_scale_back
   stable: False
   working_dir: nightly_tests
+  group: batch-inference
 
   cluster:
     cluster_compute: dataset/autoscaling_gpu_compute.yaml
@@ -540,6 +543,7 @@
 
 - name: image_embedding_from_uris_{{case}}
   frequency: manual
+  group: batch-inference
 
   matrix:
     setup:
@@ -570,6 +574,7 @@
 
 - name: batch_inference_hetero_{{case}}
   frequency: manual
+  group: batch-inference
 
   matrix:
     setup:
@@ -601,6 +606,7 @@
 
 - name: text_embedding_{{case}}
   frequency: manual
+  group: batch-inference
 
   matrix:
     setup:
