--- a/src/ray/pubsub/BUILD.bazel
+++ b/src/ray/pubsub/BUILD.bazel
@@ -84,7 +84,7 @@ ray_cc_library(
         "//src/ray/common:status",
         "//src/ray/protobuf:gcs_service_cc_proto",
         "//src/ray/protobuf:pubsub_cc_proto",
-        "//src/ray/rpc:gcs_client",
+        "//src/ray/gcs_client:rpc_client",
         "//src/ray/util:visibility",
         "@com_github_grpc_grpc//:grpc++",
         "@com_google_absl//absl/synchronization",
