--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -4092,6 +4092,23 @@
     script: >
       pytest -sv test_batch_sglang.py
 
+- name: llm_batch_vllm_multi_node
+  frequency: nightly
+  python: "3.11"
+  group: llm-batch
+  team: llm
+  working_dir: llm_tests/batch
+
+  cluster:
+    byod:
+      type: llm-cu128
+    cluster_compute: llm_8xl4.yaml
+
+  run:
+    timeout: 3600
+    script: >
+      pytest -sv test_batch_multi_node_vllm.py
+
 
 - name: text_embeddings_benchmark_{{scaling}}
   frequency: nightly
