--- a/python/ray/serve/tests/unit/BUILD.bazel
+++ b/python/ray/serve/tests/unit/BUILD.bazel
@@ -69,6 +69,8 @@ py_test_module_list_with_env_variants(
     },
     files = [
         "test_autoscaling_policy.py",
+        "test_controller.py",
+        "test_deployment_scheduler.py",
         "test_deployment_state.py",
         "test_router.py",
     ],
