--- a/src/ray/gcs_client/BUILD.bazel
+++ b/src/ray/gcs_client/BUILD.bazel
@@ -46,15 +46,18 @@ ray_cc_library(
 ray_cc_library(
     name = "rpc_client",
     hdrs = [
-      "rpc_client.h",
+        "rpc_client.h",
     ],
-  visibility = [":__pkg__", "//src/ray/pubsub:__pkg__"],
+    visibility = [
+        ":__pkg__",
+        "//src/ray/pubsub:__pkg__",
+    ],
     deps = [
-        "//src/ray/rpc:client_call",
-        "//src/ray/rpc:retryable_grpc_client",
         "//src/ray/common:ray_config",
         "//src/ray/protobuf:autoscaler_cc_grpc",
         "//src/ray/protobuf:gcs_service_cc_grpc",
+        "//src/ray/rpc:client_call",
+        "//src/ray/rpc:retryable_grpc_client",
         "//src/ray/util:network_util",
         "@com_google_absl//absl/container:btree",
     ],
