--- a/ci/raydepsets/rayllm.depsets.yaml
+++ b/ci/raydepsets/rayllm.depsets.yaml
@@ -16,6 +16,7 @@ build_arg_sets:
   append_flags:
     - --python-version=3.11
     - --python-platform=linux
+    - --unsafe-package ray
   build_arg_sets:
     - cpu
     - cu121
