--- a/src/ray/observability/tests/BUILD.bazel
+++ b/src/ray/observability/tests/BUILD.bazel
@@ -36,3 +36,25 @@ ray_cc_test(
         "@com_google_googletest//:gtest_main",
     ],
 )
+
+ray_cc_test(
+    name = "ray_actor_definition_event_test",
+    size = "small",
+    srcs = ["ray_actor_definition_event_test.cc"],
+    tags = ["team:core"],
+    deps = [
+        "//src/ray/observability:ray_actor_definition_event",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+ray_cc_test(
+    name = "ray_actor_lifecycle_event_test",
+    size = "small",
+    srcs = ["ray_actor_lifecycle_event_test.cc"],
+    tags = ["team:core"],
+    deps = [
+        "//src/ray/observability:ray_actor_lifecycle_event",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
