--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -387,7 +387,7 @@ pkg_files(
     name = "gcs_server_files",
     srcs = ["//src/ray/gcs:gcs_server"],
     attributes = pkg_attributes(mode = "755"),
-    prefix = "ray/core/src/ray",
+    prefix = "ray/core/src/ray/gcs",
     visibility = ["//visibility:private"],
 )
 
