--- a/src/ray/common/cgroup2/BUILD.bazel
+++ b/src/ray/common/cgroup2/BUILD.bazel
@@ -14,7 +14,6 @@ ray_cc_library(
     }),
     hdrs = [
         "cgroup_manager.h",
-        "scoped_cgroup_operation.h",
     ],
     visibility = ["//visibility:public"],
     deps = [
@@ -24,6 +23,7 @@ ray_cc_library(
         "//src/ray/common:status_or",
     ] + select({
         ":is_linux": [
+						":scoped_cgroup_operation",
             "//src/ray/util:logging",
             "@com_google_absl//absl/strings",
         ],
@@ -57,28 +57,35 @@ ray_cc_library(
 
 ray_cc_library(
     name = "sysfs_cgroup_driver",
-    srcs = select({
-        ":is_linux": ["sysfs_cgroup_driver.cc"],
-        "//conditions:default": ["noop_sysfs_cgroup_driver.cc"],
-    }),
+    srcs = ["sysfs_cgroup_driver.cc"],
     hdrs = [
         "sysfs_cgroup_driver.h",
+    ],
+    target_compatible_with = [
+        "@platforms//os:linux",
     ],
     visibility = ["//visibility:public"],
     deps = [
         ":cgroup_driver_interface",
         "//src/ray/common:status",
         "//src/ray/common:status_or",
-    ] + select({
-        ":is_linux": [
-            "//src/ray/util:logging",
-            "@com_google_absl//absl/strings",
-        ],
-        "//conditions:default": [],
-    }),
+				"//src/ray/util:logging",
+				"@com_google_absl//absl/strings",
+    ],
 )
 
 # Private Targets.
+ray_cc_library(
+    name = "scoped_cgroup_operation",
+    hdrs = [
+        "scoped_cgroup_operation.h",
+    ],
+    target_compatible_with = [
+        "@platforms//os:linux",
+    ],
+    visibility = [":__subpackages__"],
+)
+
 ray_cc_library(
     name = "fake_cgroup_driver",
     hdrs = [
