[core] Fix `clang-format` pre-commit step (#56534)
The existing one seemed to do nothing... swapped to using the
recommendation from this [stack overflow
post](https://stackoverflow.com/questions/55965712/how-do-i-add-clang-formatting-to-pre-commit-hook).

---------

Signed-off-by: Edward Oakes <ed.nmi.oakes@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -175,11 +175,12 @@ repos:
           # 1091: Not following {file} due to some error
           # 2207: Prefer mapfile or read -a to split command output (or quote to avoid splitting). -- these aren't compatible with macOS's old Bash
 
-  - repo: https://github.com/pocc/pre-commit-hooks
-    rev: v1.3.5
+  - repo: https://github.com/pre-commit/mirrors-clang-format
+    # `rev` specifies a tag on the above repo that mirrors the corresponding clang-format version.
+    # The version should be kept in sync with the version in `ci/lint/format.sh`.
+    rev: v12.0.1
     hooks:
       - id: clang-format
-        args: [--version=12.0.1]
 
   - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
     rev: v2.11.0
