--- a/src/ray/gcs/gcs_server/tests/BUILD.bazel
+++ b/src/ray/gcs/gcs_server/tests/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@rules_cc//cc:defs.bzl", "cc_binary")
 load("//bazel:ray.bzl", "ray_cc_library", "ray_cc_test")
 
 ray_cc_test(
@@ -111,6 +112,21 @@ ray_cc_test(
         "//src/ray/common:test_utils",
         "//src/ray/gcs/gcs_server:gcs_node_manager",
         "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_binary(
+    name = "gcs_node_manager_bench",
+    srcs = [
+        "gcs_node_manager_bench.cc",
+    ],
+    tags = ["team:core"],
+    deps = [
+        "//:ray_fakes",
+        "//src/fakes/ray/rpc/raylet:fake_raylet_client",
+        "//src/mock/ray/pubsub:mock_publisher",
+        "//src/ray/common:test_utils",
+        "//src/ray/gcs/gcs_server:gcs_node_manager",
     ],
 )
 
