--- a/src/ray/gcs_client/BUILD.bazel
+++ b/src/ray/gcs_client/BUILD.bazel
@@ -1,7 +1,7 @@
 load("//bazel:ray.bzl", "ray_cc_library")
 
 ray_cc_library(
-    name = "gcs_client_lib",
+    name = "gcs_client",
     srcs = [
         "accessor.cc",
         "gcs_client.cc",
@@ -11,6 +11,7 @@ ray_cc_library(
         "gcs_client.h",
     ],
     deps = [
+        ":rpc_client",
         "//src/ray/common:asio",
         "//src/ray/common:id",
         "//src/ray/common:placement_group",
@@ -19,7 +20,6 @@ ray_cc_library(
         "//src/ray/protobuf:usage_cc_proto",
         "//src/ray/pubsub:gcs_subscriber",
         "//src/ray/pubsub:subscriber",
-        "//src/ray/rpc:gcs_client",
         "//src/ray/util:container_util",
         "//src/ray/util:network_util",
         "//src/ray/util:sequencer",
@@ -31,7 +31,7 @@ ray_cc_library(
     srcs = ["global_state_accessor.cc"],
     hdrs = ["global_state_accessor.h"],
     deps = [
-        ":gcs_client_lib",
+        ":gcs_client",
         "//src/ray/util:time",
     ],
 )
@@ -40,5 +40,25 @@ ray_cc_library(
     name = "gcs_python_callbacks",
     hdrs = [
         "python_callbacks.h",
+    ],
+)
+
+ray_cc_library(
+    name = "rpc_client",
+    hdrs = [
+        "rpc_client.h",
+    ],
+    visibility = [
+        ":__pkg__",
+        "//src/ray/pubsub:__pkg__",
+    ],
+    deps = [
+        "//src/ray/common:ray_config",
+        "//src/ray/protobuf:autoscaler_cc_grpc",
+        "//src/ray/protobuf:gcs_service_cc_grpc",
+        "//src/ray/rpc:client_call",
+        "//src/ray/rpc:retryable_grpc_client",
+        "//src/ray/util:network_util",
+        "@com_google_absl//absl/container:btree",
     ],
 )
