--- a/src/ray/raylet/scheduling/tests/BUILD.bazel
+++ b/src/ray/raylet/scheduling/tests/BUILD.bazel
@@ -13,7 +13,7 @@ ray_cc_test(
         "//src/ray/common:ray_config",
         "//src/ray/common:task_common",
         "//src/ray/common:test_utils",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client",
         "//src/ray/raylet/scheduling:cluster_resource_scheduler",
         "@com_google_googletest//:gtest_main",
     ],
