--- a/src/ray/rpc/BUILD.bazel
+++ b/src/ray/rpc/BUILD.bazel
@@ -138,23 +138,6 @@ ray_cc_library(
 )
 
 ray_cc_library(
-    name = "gcs_client",
-    hdrs = [
-        "gcs/gcs_rpc_client.h",
-    ],
-    visibility = ["//visibility:public"],
-    deps = [
-        ":client_call",
-        ":retryable_grpc_client",
-        "//src/ray/common:ray_config",
-        "//src/ray/protobuf:autoscaler_cc_grpc",
-        "//src/ray/protobuf:gcs_service_cc_grpc",
-        "//src/ray/util:network_util",
-        "@com_google_absl//absl/container:btree",
-    ],
-)
-
-ray_cc_library(
     name = "raylet_client_interface",
     hdrs = [
         "raylet/raylet_client_interface.h",
@@ -176,7 +159,7 @@ ray_cc_library(
     visibility = ["//visibility:public"],
     deps = [
         ":raylet_client_interface",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client",
     ],
 )
 
@@ -210,7 +193,7 @@ ray_cc_library(
         ":raylet_client_pool",
         "//src/ray/common:id",
         "//src/ray/common:status",
-        "//src/ray/gcs/gcs_client:gcs_client_lib",
+        "//src/ray/gcs_client",
         "//src/ray/protobuf:core_worker_cc_grpc",
         "//src/ray/pubsub:subscriber",
         "//src/ray/util:logging",
