--- a/src/ray/core_worker/task_submission/BUILD.bazel
+++ b/src/ray/core_worker/task_submission/BUILD.bazel
@@ -20,6 +20,7 @@ ray_cc_library(
 ray_cc_library(
     name = "actor_submit_queue",
     hdrs = ["actor_submit_queue.h"],
+    srcs = ["actor_submit_queue.cc"],
     visibility = [":__subpackages__"],
     deps = [
         "//src/ray/common:id",
