[core][1ev-debt/01] make ray event recorder buffer bounded
Signed-off-by: Cuong Nguyen <can@anyscale.com>

--- a/src/ray/gcs_client/tests/BUILD.bazel
+++ b/src/ray/gcs_client/tests/BUILD.bazel
@@ -34,6 +34,7 @@ ray_cc_test(
         "//src/ray/gcs:gcs_server_lib",
         "//src/ray/gcs_client",
         "//src/ray/gcs_client:global_state_accessor_lib",
+        "//src/ray/observability:fake_metric",
         "//src/ray/util:path_utils",
         "//src/ray/util:raii",
         "@com_google_googletest//:gtest_main",
@@ -63,6 +64,7 @@ ray_cc_test(
         "//src/ray/common:test_utils",
         "//src/ray/gcs:gcs_server_lib",
         "//src/ray/gcs_client",
+        "//src/ray/observability:fake_metric",
         "//src/ray/util:network_util",
         "//src/ray/util:raii",
         "//src/ray/util:time",
@@ -91,6 +93,7 @@ ray_cc_test(
         "//src/ray/common:test_utils",
         "//src/ray/gcs:gcs_server_lib",
         "//src/ray/gcs_client",
+        "//src/ray/observability:fake_metric",
         "//src/ray/util:network_util",
         "//src/ray/util:path_utils",
         "//src/ray/util:raii",
