adding lock files
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/docker/base-extra-testdeps/cpu.wanda.yaml
+++ b/docker/base-extra-testdeps/cpu.wanda.yaml
@@ -3,6 +3,7 @@ froms: ["cr.ray.io/rayproject/$IMAGE_TYPE-py$PYTHON_VERSION-cpu-base-extra"]
 dockerfile: release/ray_release/byod/byod.Dockerfile
 srcs:
   - release/ray_release/byod/requirements_byod_$PYTHON_VERSION.txt
+  - python/deplocks/ray_img/ray_base_extra_testdeps_py$PYTHON_VERSION.lock
 build_args:
   - BASE_IMAGE=cr.ray.io/rayproject/$IMAGE_TYPE-py$PYTHON_VERSION-cpu-base-extra
   - PIP_REQUIREMENTS=release/ray_release/byod/$REQUIREMENTS_FILE
