--- a/ci/raydepsets/rayimg.depsets.yaml
+++ b/ci/raydepsets/rayimg.depsets.yaml
@@ -18,7 +18,7 @@ depsets:
     packages:
       - ray[all]==100.0.0-dev
     requirements:
-      - docker/base-deps/requirements.txt
+      - docker/base-deps/requirements.in
     constraints:
       - python/requirements_compiled.txt
     output: python/deplocks/ray_img/ray_img_py${PYTHON_SHORT}.lock
@@ -33,3 +33,21 @@ depsets:
       - py312
     pre_hooks:
       - ci/build/build-placeholder-wheel.sh
+
+  - name: ray_base_extra_testdeps_${PYTHON_SHORT}
+    operation: expand
+    requirements:
+      - release/ray_release/byod/requirements_byod_${PYTHON_VERSION}.in
+    constraints:
+      - python/requirements_compiled.txt
+    depsets:
+      - ray_img_depset_${PYTHON_SHORT}
+    output: python/deplocks/ray_img/ray_base_extra_testdeps_py${PYTHON_SHORT}.lock
+    append_flags:
+      - --python-version=${PYTHON_VERSION}
+      - --find-links=.whl/
+    build_arg_sets:
+      - py39
+      - py310
+      - py311
+      - py312
