--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -1778,6 +1778,7 @@
 ########################
 
 - name: jobs_basic_local_working_dir
+  python: "3.10"
   group: Jobs tests
   working_dir: jobs_tests
 
