--- a/ci/raydepsets/rayimg.depsets.yaml
+++ b/ci/raydepsets/rayimg.depsets.yaml
@@ -36,11 +36,9 @@ depsets:
     operation: expand
     requirements:
       - release/ray_release/byod/requirements_byod_${PYTHON_VERSION}.in
-    constraints:
-      - python/requirements_compiled.txt
     depsets:
       - ray_img_depset_${PYTHON_SHORT}
-    output: python/deplocks/ray_img/ray_base_extra_testdeps_py${PYTHON_SHORT}.lock
+    output: python/deplocks/ray_img/ray_base_extra_testdeps_py${PYTHON_VERSION}.lock
     append_flags:
       - --python-version=${PYTHON_VERSION}
       - --find-links=.whl/
