--- a/.buildkite/core.rayci.yml
+++ b/.buildkite/core.rayci.yml
@@ -296,7 +296,7 @@ steps:
     tags: core_cpp
     instance_type: medium
     commands:
-      - bazel run //ci/ray_ci:test_in_docker -- //:all //src/ray/common/cgroup2/tests/... core --build-type clang --cache-test-results
+      - bazel run //ci/ray_ci:test_in_docker -- //:all //src/ray/common/cgroup2/tests:test_resource_isolation_config  //src/ray/common/cgroup2/tests:test_resource_isolation_integration core --build-type clang --cache-test-results
       - bazel run //ci/ray_ci:test_in_docker -- //:all //python/ray/tests/resource_isolation/... core --privileged --cache-test-results
       - docker run --privileged -i --rm --volume /tmp/artifacts:/artifact-mount --shm-size=2.5gb
         "$${RAYCI_WORK_REPO}":"$${RAYCI_BUILD_ID}"-corebuild /bin/bash
