--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -236,7 +236,9 @@
   group: AIR tests
   working_dir: air_tests/air_benchmarks
 
-  frequency: weekly
+  # Failing since Aug 2024
+  # https://github.com/ray-project/ray/issues/46687
+  frequency: manual
   team: ml
 
   cluster:
@@ -252,7 +254,7 @@
       num_nodes: 4
 
   smoke_test:
-    frequency: nightly
+    frequency: manual
 
     cluster:
       cluster_compute: compute_gpu_2x2_aws.yaml
@@ -557,7 +559,9 @@
   group: AIR tests
   working_dir: air_tests/air_benchmarks
 
-  frequency: nightly
+  # Jailed with
+  # https://github.com/ray-project/ray/issues/56282
+  frequency: manual
   team: ml
 
   stable: false
@@ -620,7 +624,9 @@
 
   stable: false
 
-  frequency: nightly
+  # Failing since Aug 2025.
+  # https://github.com/ray-project/ray/issues/52562
+  frequency: manual
 
   team: data
   cluster:
@@ -4094,7 +4100,9 @@
 
   stable: false
 
-  frequency: nightly
+  # Failing since Oct 2024.
+  # https://github.com/ray-project/ray/issues/36190
+  frequency: manual
   team: serve
   cluster:
     byod: {}
