[release] Separate custom BYOD image build & set up image build dependency for test jobs in release test pipeline (#56233)
- Stop building Anyscale images & custom images in `test init` step
since regular images are already launched by `init`, while custom image
builds are launched independently (by running
`custom_byod_build_init_helper` in `init` step)
- Add dependency for test jobs in the pipeline to depend on each image
build that it needs rather than waiting for the `test init` step which
currently builds image sequentially

---------

Signed-off-by: kevin <kevin@anyscale.com>

--- a/release/BUILD.bazel
+++ b/release/BUILD.bazel
@@ -752,6 +752,10 @@ py_binary(
 py_binary(
     name = "custom_byod_build_init",
     srcs = ["ray_release/scripts/custom_byod_build_init.py"],
+    data = [
+        "release_data_tests.yaml",
+        "release_tests.yaml",
+    ],
     exec_compatible_with = ["//:hermetic_python"],
     deps = [
         ":ray_release",
