--- a/python/ray/data/BUILD.bazel
+++ b/python/ray/data/BUILD.bazel
@@ -379,6 +379,20 @@ py_test(
 )
 
 py_test(
+    name = "test_custom_aggregations",
+    size = "small",
+    srcs = ["tests/test_custom_aggregations.py"],
+    tags = [
+        "exclusive",
+        "team:data",
+    ],
+    deps = [
+        ":conftest",
+        "//:ray_lib",
+    ],
+)
+
+py_test(
     name = "test_groupby_e2e",
     size = "enormous",
     srcs = ["tests/test_groupby_e2e.py"],
