--- a/ci/raydepsets/tests/test_data/test.depsets.yaml
+++ b/ci/raydepsets/tests/test_data/test.depsets.yaml
@@ -57,7 +57,7 @@ depsets:
       - requirements_test.txt
     output: requirements_compiled_pre_hook.txt
     pre_hooks:
-      - hook-test.sh pre
+      - "hook-test.sh pre"
   - name: multi_pre_hook_test_depset
     operation: compile
     requirements:
@@ -79,9 +79,9 @@ depsets:
       - requirements_test.txt
     output: requirements_compiled_pre_hook.txt
     pre_hooks:
-      - hook-test.sh
+      - hook-test.sh pre-1
       - hook-error-test.sh
-      - hook-test.sh
+      - hook-test.sh pre-3
   - name: post_hook_test_depset
     operation: compile
     requirements:
@@ -110,6 +110,6 @@ depsets:
       - requirements_test.txt
     output: requirements_compiled_pre_hook.txt
     post_hooks:
-      - hook-test.sh
+      - hook-test.sh post-1
       - hook-error-test.sh
-      - hook-test.sh
+      - hook-test.sh post-3
