[Core] Update cluster scheduler to handle label selector hard node id constraint (#56235)
Signed-off-by: Ryan O'Leary <ryanaoleary@google.com>
Signed-off-by: Ryan O'Leary <113500783+ryanaoleary@users.noreply.github.com>
Co-authored-by: Mengjin Yan <mengjinyan3@gmail.com>
Co-authored-by: Jiajun Yao <jeromeyjj@gmail.com>

--- a/src/ray/common/scheduling/BUILD.bazel
+++ b/src/ray/common/scheduling/BUILD.bazel
@@ -21,6 +21,7 @@ ray_cc_library(
     srcs = ["label_selector.cc"],
     hdrs = ["label_selector.h"],
     deps = [
+        "//src/ray/common:constants",
         "//src/ray/protobuf:common_cc_proto",
         "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/strings",
