--- a/ci/raydepsets/tests/test_data/test.depsets.yaml
+++ b/ci/raydepsets/tests/test_data/test.depsets.yaml
@@ -58,3 +58,10 @@ depsets:
     output: requirements_compiled_pre_hook.txt
     pre_hooks:
       - pre-hook-test.sh
+  - name: pre_hook_invalid_test_depset
+    operation: compile
+    requirements:
+      - requirements_test.txt
+    output: requirements_compiled_pre_hook.txt
+    pre_hooks:
+      - pre-hook-error-test.sh
