--- a/src/ray/raylet/BUILD.bazel
+++ b/src/ray/raylet/BUILD.bazel
@@ -229,6 +229,7 @@ ray_cc_library(
         "//src/ray/common:flatbuf_utils",
         "//src/ray/common:lease",
         "//src/ray/common:memory_monitor",
+        "//src/ray/common/cgroup2:cgroup_manager_interface",
         "//src/ray/core_worker:experimental_mutable_object_provider",
         "//src/ray/flatbuffers:node_manager_generated",
         "//src/ray/gcs_client",
