--- a/src/ray/raylet/tests/BUILD.bazel
+++ b/src/ray/raylet/tests/BUILD.bazel
@@ -186,6 +186,8 @@ ray_cc_test(
         "//src/ray/common:lease",
         "//src/ray/common:ray_object",
         "//src/ray/common:task_common",
+        "//src/ray/common/cgroup2:cgroup_manager_interface",
+        "//src/ray/object_manager/plasma:plasma_client",
         "//src/ray/observability:fake_metric",
         "//src/ray/raylet:local_object_manager_interface",
         "//src/ray/raylet:node_manager",
