[core][1eventx/04] node event: send node events to the aggregator (#56426)
Signed-off-by: Cuong Nguyen <can@anyscale.com>
Signed-off-by: Zhiqiang Ma <zhiqiang.ma@intel.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -118,6 +118,9 @@ ray_cc_library(
             "src/mock/ray/common/ray_syncer/ray_syncer.h",
         ],
     ),
+    deps = [
+        "//src/ray/observability:fake_ray_event_recorder",
+    ],
 )
 
 ray_cc_library(
