--- a/src/ray/gcs/BUILD.bazel
+++ b/src/ray/gcs/BUILD.bazel
@@ -74,6 +74,9 @@ ray_cc_library(
         "//src/ray/common:id",
         "//src/ray/common:protobuf_utils",
         "//src/ray/common:ray_config",
+        "//src/ray/observability:ray_event_recorder_interface",
+        "//src/ray/observability:ray_node_definition_event",
+        "//src/ray/observability:ray_node_lifecycle_event",
         "//src/ray/protobuf:autoscaler_cc_proto",
         "//src/ray/protobuf:gcs_service_cc_proto",
         "//src/ray/protobuf:ray_syncer_cc_proto",
