--- a/src/ray/gcs/tests/BUILD.bazel
+++ b/src/ray/gcs/tests/BUILD.bazel
@@ -126,7 +126,7 @@ cc_binary(
         "//src/fakes/ray/rpc/raylet:fake_raylet_client",
         "//src/mock/ray/pubsub:mock_publisher",
         "//src/ray/common:test_utils",
-        "//src/ray/gcs/gcs_server:gcs_node_manager",
+        "//src/ray/gcs:gcs_node_manager",
     ],
 )
 
