generating lock files
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/docker/base-extra/requirements.in
+++ b/docker/base-extra/requirements.in
@@ -9,4 +9,4 @@ grpcio-tools
 jupyter_server_terminals==0.4.4
 
 # [backend] is for installing anyscale CLI for use in the anyscale cloud.
-"anyscale[backend]"
+anyscale[backend]
