--- a/ci/raydepsets/rayimg.depsets.yaml
+++ b/ci/raydepsets/rayimg.depsets.yaml
@@ -38,6 +38,8 @@ depsets:
       - release/ray_release/byod/requirements_byod_${PYTHON_VERSION}.in
       - docker/base-deps/requirements.in
       - docker/base-extra/requirements.in
+    constraints:
+      - python/requirements_compiled.txt
     depsets:
       - ray_img_depset_${PYTHON_SHORT}
     output: release/ray_release/byod/ray_base_extra_testdeps_py${PYTHON_VERSION}.lock
