First change to add aggregators per column type. Numerical, categorical, and vector aggregators
Added two new aggregators - MissingValuePercentage and ZeroPercentage which is applicable to numerical columns

This is prep work for adding `pd.describe()` like functionality for Ray Data.

--- a/python/ray/data/BUILD.bazel
+++ b/python/ray/data/BUILD.bazel
@@ -1585,3 +1585,31 @@ py_test(
         "//:ray_lib",
     ],
 )
+
+py_test(
+    name = "test_custom_agg",
+    size = "small",
+    srcs = ["tests/test_custom_agg.py"],
+    tags = [
+        "exclusive",
+        "team:data",
+    ],
+    deps = [
+        ":conftest",
+        "//:ray_lib",
+    ],
+)
+
+py_test(
+    name = "test_dataset_stats",
+    size = "small",
+    srcs = ["tests/test_dataset_stats.py"],
+    tags = [
+        "exclusive",
+        "team:data",
+    ],
+    deps = [
+        ":conftest",
+        "//:ray_lib",
+    ],
+)
