--- a/src/ray/gcs/BUILD.bazel
+++ b/src/ray/gcs/BUILD.bazel
@@ -367,6 +367,9 @@ ray_cc_library(
         "//src/ray/common:lease",
         "//src/ray/common:task_common",
         "//src/ray/common/scheduling:cluster_resource_data",
+        "//src/ray/observability:ray_event_recorder_interface",
+        "//src/ray/observability:ray_actor_definition_event",
+        "//src/ray/observability:ray_actor_lifecycle_event",
         "//src/ray/protobuf:core_worker_cc_proto",
         "//src/ray/protobuf:export_event_cc_proto",
         "//src/ray/protobuf:gcs_service_cc_proto",
@@ -424,6 +427,7 @@ ray_cc_library(
         "//src/ray/common:protobuf_utils",
         "//src/ray/common:ray_config",
         "//src/ray/common:task_common",
+        "//src/ray/observability:ray_event_recorder_interface",
         "//src/ray/protobuf:gcs_service_cc_proto",
         "//src/ray/pubsub:gcs_publisher",
         "//src/ray/rpc:core_worker_client",
