[Train] Enable debug logging in Release tests
Signed-off-by: Srinath Krishnamachari <srinath.krishnamachari@anyscale.com>

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2176,6 +2176,11 @@
 
   cluster:
     byod:
+      runtime_env:
+        # Enable verbose stats for resource manager
+        - RAY_DATA_DEBUG_RESOURCE_MANAGER=1
+
+      # 'type: gpu' means: use the 'ray-ml' image.
       type: gpu
     cluster_compute: compute_configs/compute_gpu_4x4_aws.yaml
 
