--- a/python/ray/serve/tests/BUILD.bazel
+++ b/python/ray/serve/tests/BUILD.bazel
@@ -134,6 +134,12 @@ py_test_module_list(
 # Large tests.
 py_test_module_list(
     size = "large",
+    env = {
+        # Speed up Serve replica and handle autoscaling metrics pushes,
+        # so that we can test autoscaling more quickly.
+        "RAY_SERVE_REPLICA_AUTOSCALING_METRIC_PUSH_INTERVAL_S": "0.1",
+        "RAY_SERVE_HANDLE_AUTOSCALING_METRIC_PUSH_INTERVAL_S": "0.1",
+    },
     files = [
         "test_autoscaling_policy.py",
         "test_deploy.py",
@@ -302,8 +308,10 @@ py_test(
     srcs = ["test_autoscaling_policy.py"],
     env = {
         "RAY_SERVE_COLLECT_AUTOSCALING_METRICS_ON_HANDLE": "0",
-        # Make sure queued metrics are cleared out quickly.
-        "RAY_SERVE_HANDLE_METRIC_PUSH_INTERVAL_S": "0.1",
+        # Speed up Serve replica and handle autoscaling metrics pushes,
+        # so that we can test autoscaling more quickly.
+        "RAY_SERVE_REPLICA_AUTOSCALING_METRIC_PUSH_INTERVAL_S": "0.1",
+        "RAY_SERVE_HANDLE_AUTOSCALING_METRIC_PUSH_INTERVAL_S": "0.1",
     },
     main = "test_autoscaling_policy.py",
     tags = [
