--- a/src/ray/gcs/tests/BUILD.bazel
+++ b/src/ray/gcs/tests/BUILD.bazel
@@ -127,6 +127,7 @@ cc_binary(
         "//src/mock/ray/pubsub:mock_publisher",
         "//src/ray/common:test_utils",
         "//src/ray/gcs:gcs_node_manager",
+        "@benchmark",
     ],
 )
 
