adding unit test
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/ci/raydepsets/tests/test_data/test.depsets.yaml
+++ b/ci/raydepsets/tests/test_data/test.depsets.yaml
@@ -57,4 +57,4 @@ depsets:
       - requirements_test.txt
     output: requirements_compiled_pre_hook.txt
     pre_hooks:
-      - pre-hook-test.sh
+      - pre-hook-test.sh test
