--- a/python/ray/data/BUILD.bazel
+++ b/python/ray/data/BUILD.bazel
@@ -743,6 +743,20 @@ py_test(
 )
 
 py_test(
+    name = "test_projection_fusion",
+    size = "small",
+    srcs = ["tests/test_projection_fusion.py"],
+    tags = [
+        "exclusive",
+        "team:data",
+    ],
+    deps = [
+        ":conftest",
+        "//:ray_lib",
+    ],
+)
+
+py_test(
     name = "test_path_util",
     size = "small",
     srcs = ["tests/test_path_util.py"],
