address pr comments
Signed-off-by: Timothy Seah <tseah@anyscale.com>

--- a/python/ray/_common/tests/BUILD.bazel
+++ b/python/ray/_common/tests/BUILD.bazel
@@ -19,6 +19,7 @@ py_test_module_list(
         "test_formatters.py",
         "test_network_utils.py",
         "test_ray_option_utils.py",
+        "test_retry.py",
         "test_signal_semaphore_utils.py",
         "test_signature.py",
         "test_utils.py",
