--- a/.buildkite/others.rayci.yml
+++ b/.buildkite/others.rayci.yml
@@ -26,7 +26,7 @@ steps:
     instance_type: medium
     commands:
       # Java tests need the C++ API for multi-langauge worker tests.
-      - bazel run //ci/ray_ci:test_in_docker -- //... core --build-type with_cpp --build-only
+      - bazel run //ci/ray_ci:test_in_docker -- //... core --build-type with-cpp --build-only
       - docker run -i --rm --volume /tmp/artifacts:/artifact-mount --shm-size=2.5gb
         "$${RAYCI_WORK_REPO}":"$${RAYCI_BUILD_ID}"-corebuild /bin/bash -iecuo pipefail
         "./java/test.sh"
