--- a/ci/raydepsets/rayimg.depsets.yaml
+++ b/ci/raydepsets/rayimg.depsets.yaml
@@ -50,3 +50,20 @@ depsets:
       - py310
       - py311
       - py312
+
+  - name: ray_ml_base_extra_testdeps_${PYTHON_SHORT}
+    operation: expand
+    requirements:
+      - release/ray_release/byod/requirements_ml_byod_${PYTHON_VERSION}.in
+      - docker/base-deps/requirements.in
+      - docker/base-extra/requirements.in
+    constraints:
+      - python/requirements_compiled.txt
+    depsets:
+      - ray_img_depset_${PYTHON_SHORT}
+    output: release/ray_release/byod/ray_ml_base_extra_testdeps_py${PYTHON_VERSION}.lock
+    append_flags:
+      - --python-version=${PYTHON_VERSION}
+    build_arg_sets:
+      - py39
+      - py310
