reverting requirements file
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/.buildkite/release/build.rayci.yml
+++ b/.buildkite/release/build.rayci.yml
@@ -46,7 +46,7 @@ steps:
       PYTHON_VERSION: "{{matrix.python}}"
       CUDA_VERSION: "{{matrix.cuda}}"
       IMAGE_TYPE: "ray-llm"
-      REQUIREMENTS_FILE: "ray_ml_base_extra_testdeps_py{{matrix.python}}.lock"
+      REQUIREMENTS_FILE: "requirements_llm_byod_{{matrix.python}}.txt"
     depends_on:
       - ray-llmbaseextra
 
