[core] Fixing windows build with cgroups. Broken in cgroups 10/n. (#56626)
Broken in #56446.

This should stop being possible once there's a single cgroups target
exported (as highlighted in #54703).

I've fixed the broken build and I've added a temporary test target that
builds the noop implementations as part of Linux CI so it gets caught in
premerge.

---------

Signed-off-by: irabbani <israbbani@gmail.com>
Signed-off-by: Zhiqiang Ma <zhiqiang.ma@intel.com>

--- a/src/ray/common/cgroup2/tests/BUILD.bazel
+++ b/src/ray/common/cgroup2/tests/BUILD.bazel
@@ -39,3 +39,20 @@ ray_cc_test(
         "@com_google_googletest//:gtest_main",
     ],
 )
+
+# TODO(#54703): This target builds the noop implementations.
+# There's a corressponding test that runs on Linux and Non-Linux
+# CI so breakages are caught in premerge before these targets are
+# cleaned up at the end of the resource isolation milestone 1
+# project.
+ray_cc_test(
+    name = "noop_cgroup_test",
+    srcs = ["noop_cgroup_test.cc"],
+    tags = [
+        "team:core",
+    ],
+    deps = [
+        "//src/ray/common/cgroup2:noop_cgroup_targets",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
