Address comments part 6
Signed-off-by: Arthur Leung <arcyleung@gmail.com>

--- a/python/ray/serve/tests/BUILD.bazel
+++ b/python/ray/serve/tests/BUILD.bazel
@@ -34,6 +34,7 @@ py_test_module_list(
 py_test_module_list(
     size = "small",
     env = {
+        "RAY_SERVE_COLLECT_AUTOSCALING_METRICS_ON_HANDLE": "0",
         "RAY_SERVE_REPLICA_AUTOSCALING_METRIC_RECORD_INTERVAL_S": "2",
         "RAY_SERVE_RECORD_AUTOSCALING_STATS_TIMEOUT_S": "3",
     },
