enable metrics but disable heartbeats
Signed-off-by: zac <zac@anyscale.com>

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -3702,6 +3702,7 @@
       runtime_env:
         - LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so
         - RAY_enable_open_telemetry=1
+        - RAY_emit_main_service_metrics=1
     cluster_compute: distributed.yaml
 
   run:
