--- a/python/ray/train/v2/BUILD.bazel
+++ b/python/ray/train/v2/BUILD.bazel
@@ -422,6 +422,23 @@ py_test(
 )
 
 py_test(
+    name = "test_torch_gpu",
+    size = "small",
+    srcs = ["tests/test_torch_gpu.py"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    tags = [
+        "exclusive",
+        "gpu_only",
+        "team:ml",
+        "train_v2",
+    ],
+    deps = [
+        ":conftest",
+        "//:ray_lib",
+    ],
+)
+
+py_test(
     name = "test_torch_trainer",
     size = "small",
     srcs = ["tests/test_torch_trainer.py"],
