Added missing bazel def
Signed-off-by: Alexey Kudinkin <ak@anyscale.com>

--- a/python/ray/data/BUILD.bazel
+++ b/python/ray/data/BUILD.bazel
@@ -589,6 +589,20 @@ py_test(
 )
 
 py_test(
+    name = "test_hash_shuffle",
+    size = "small",
+    srcs = ["tests/test_hash_shuffle.py"],
+    tags = [
+        "exclusive",
+        "team:data",
+    ],
+    deps = [
+        ":conftest",
+        "//:ray_lib",
+    ],
+)
+
+py_test(
     name = "test_hudi",
     size = "medium",
     srcs = ["tests/test_hudi.py"],
