--- a/.buildkite/core.rayci.yml
+++ b/.buildkite/core.rayci.yml
@@ -387,7 +387,7 @@ steps:
       - oss
     instance_type: medium
     commands:
-      - if [[ "$${BUILDKITE_PIPELINE_ID}" == "0189942e-0876-4b8f-80a4-617f988ec59b" ]]; then
+      - if [[ "$${BUILDKITE_CACHE_READONLY:-}" == "true" ]]; then
           echo "build --remote_upload_local_results=false" >> ~/.bazelrc;
         fi
       - ci/ci.sh build
