enable v2 for doctest
Signed-off-by: Justin Yu <justinvyu@anyscale.com>

--- a/python/ray/air/BUILD.bazel
+++ b/python/ray/air/BUILD.bazel
@@ -2,6 +2,7 @@ load("@rules_python//python:defs.bzl", "py_library", "py_test")
 load("//bazel:python.bzl", "doctest")
 
 doctest(
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
     files = glob(
         ["**/*.py"],
         exclude = glob([
