move to correct BUILD file
Signed-off-by: Timothy Seah <tseah@anyscale.com>

--- a/python/ray/train/v2/BUILD.bazel
+++ b/python/ray/train/v2/BUILD.bazel
@@ -54,6 +54,17 @@ py_test(
 )
 
 py_test(
+    name = "test_validation_manager",
+    size = "small",
+    srcs = ["tests/test_validation_manager.py"],
+    tags = [
+        "exclusive",
+        "team:ml",
+    ],
+    deps = [":train_lib"],
+)
+
+py_test(
     name = "test_collective",
     size = "small",
     srcs = ["tests/test_collective.py"],
